--- a/package.json
+++ b/package.json
@@ -3,11 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "aws-amplify": "^4.2.1",
+    "expo-location": "^12.1.2",
+    "geolocation-utils": "^1.2.5",
+    "material-ui": "^0.20.2",
+    "pizzicato": "^0.6.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-native": "^0.64.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
