--- a/package.json
+++ b/package.json
@@ -8,9 +8,14 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@turf/turf": "^6.5.0",
     "aws-amplify": "^4.2.1",
+    "consola": "^2.15.3",
+    "console": "^0.7.2",
+    "console-feed": "^3.2.2",
     "expo-location": "^12.1.2",
     "geolocation-utils": "^1.2.5",
+    "inline-console": "^1.0.21",
     "material-ui": "^0.20.2",
     "pizzicato": "^0.6.4",
     "react": "^17.0.2",
