--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@hughsk/fulltilt": "^0.7.1",
     "@material-ui/core": "^4.12.2",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -14,6 +16,7 @@
     "console": "^0.7.2",
     "console-feed": "^3.2.2",
     "expo-location": "^12.1.2",
+    "fulltilt-ng": "^1.0.3",
     "geolocation-utils": "^1.2.5",
     "inline-console": "^1.0.21",
     "material-ui": "^0.20.2",
