--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^17.0.2",
     "react-native": "^0.64.2",
     "react-scripts": "4.0.3",
+    "shake.js": "^1.2.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
