--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@testing-library/user-event": "^12.8.3",
     "@turf/turf": "^6.5.0",
     "aws-amplify": "^4.2.1",
+    "azimuth": "^0.1.0",
     "consola": "^2.15.3",
     "console": "^0.7.2",
     "console-feed": "^3.2.2",
+    "disable-browser-back-navigation": "^0.1.0",
     "expo-location": "^12.1.2",
     "fulltilt-ng": "^1.0.3",
     "geolocation-utils": "^1.2.5",
